force-app/main/default/objects/animalos__Animal__c/fields/animalos__Adoption_Fee__c.field-meta.xml
<CustomField>
    <fullName>animalos__Adoption_Fee__c</fullName>
    <label>Adoption Fee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>