force-app/main/default/objects/animalos__Animal__c/fields/animalos__Adoption_Profile__c.field-meta.xml
<CustomField>
    <fullName>animalos__Adoption_Profile__c</fullName>
    <label>Adoption Profile</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>