force-app/main/default/objects/animalos__Animal__c/fields/animalos__Age_at_Arrival__c.field-meta.xml
<CustomField>
    <fullName>animalos__Age_at_Arrival__c</fullName>
    <formula>IF(
    OR(ISBLANK(animalos__Date_of_Birth__c), ISBLANK(animalos__Incoming_Date__c)),
    &apos;&apos;,
TEXT(FLOOR((DATEVALUE(animalos__Incoming_Date__c) - animalos__Date_of_Birth__c )/365.25)) &amp;&apos; YEARS&apos; &amp; &apos; &apos; &amp;
        TEXT(FLOOR(MOD((DATEVALUE(animalos__Incoming_Date__c) - animalos__Date_of_Birth__c),365.25)/30.44)) &amp;&apos; MONTHS&apos; &amp; &apos; &apos; &amp;
        TEXT(FLOOR(MOD(MOD((DATEVALUE(animalos__Incoming_Date__c) - animalos__Date_of_Birth__c),365.25),30.44))) &amp;&apos; DAYS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age at Arrival</label>
    <type>Text</type>
</CustomField>