force-app/main/default/objects/animalos__Animal__c/fields/animalos__Age_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Age_Entered_Date__c</fullName>
    <label>Age Entered Date</label>
    <type>Date</type>
</CustomField>