force-app/main/default/objects/animalos__Animal__c/fields/animalos__Age_for_Adoption_Website__c.field-meta.xml
<CustomField>
    <fullName>animalos__Age_for_Adoption_Website__c</fullName>
    <formula>IF(NOT(ISBLANK(animalos__Date_of_Birth__c)),
CASE(FLOOR((TODAY() - animalos__Date_of_Birth__c )/365),
0, &apos;&apos;,
1, &apos;1 Year&apos;,
TEXT(FLOOR((TODAY() - animalos__Date_of_Birth__c )/365)) &amp;&apos; Years&apos;) &amp; &apos; &apos; &amp;
CASE(FLOOR(MOD((TODAY() - animalos__Date_of_Birth__c),365)/30),
0, &apos;&apos;,
1, &apos;1 Month&apos;,
TEXT(FLOOR(MOD((TODAY() - animalos__Date_of_Birth__c),365)/30)) &amp;&apos; Months&apos;),
&apos;Unknown&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age for Adoption Website</label>
    <type>Text</type>
</CustomField>