force-app/main/default/objects/animalos__Animal__c/fields/animalos__Age_Group__c.field-meta.xml
<CustomField>
    <fullName>animalos__Age_Group__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>animalos__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Baby 0 - 8 wks</fullName>
            </value>
            <value>
                <fullName>Juvenile 8 wks - 6 mths</fullName>
            </value>
            <value>
                <fullName>Young Adult 6 mths - 1 yr</fullName>
            </value>
            <value>
                <fullName>Adult 1 yr - 8 yrs</fullName>
            </value>
            <value>
                <fullName>Senior 8 yrs+</fullName>
            </value>
            <value>
                <fullName>Egg</fullName>
            </value>
            <value>
                <fullName>Neonate</fullName>
            </value>
            <value>
                <fullName>Juvenile</fullName>
            </value>
            <value>
                <fullName>Sub-Adult</fullName>
            </value>
            <value>
                <fullName>Young Adult</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Hatchling</fullName>
            </value>
            <value>
                <fullName>Nestling</fullName>
            </value>
            <value>
                <fullName>Chick</fullName>
            </value>
            <value>
                <fullName>Fledgling</fullName>
            </value>
            <value>
                <fullName>Immature</fullName>
            </value>
            <value>
                <fullName>Mature/adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>