force-app/main/default/objects/animalos__Animal__c/fields/animalos__Alert_Flag__c.field-meta.xml
<CustomField>
    <fullName>animalos__Alert_Flag__c</fullName>
    <formula>IF(
     ISBLANK(animalos__Alert_Flag_Condition__c),
     IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/default.png&quot;,&quot;GREEN&quot;, 30, -1),
     IF(
        animalos__Alert_Flag_Condition__c  = &quot;DEFAULT&quot;,
        IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/default.png&quot;,&quot;GREEN&quot;, 30, -1),
        IF(
            animalos__Alert_Flag_Condition__c  = &quot;YELLOW&quot;,
            IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/yellow.png&quot;,&quot;YELLOW&quot;, 30, -1),
            IF(
                animalos__Alert_Flag_Condition__c = &quot;RED&quot;,
                IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/red.png&quot;,&quot;RED&quot;, 30, -1),
                IF(
                     animalos__Alert_Flag_Condition__c = &quot;ORANGE&quot;,
                     IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/orange.png&quot;,&quot;ORANGE&quot;, 30, -1),
                     IF(
                        animalos__Alert_Flag_Condition__c = &quot;GREY&quot;,
                        IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/grey.png&quot;,&quot;GREY&quot;, 30, -1),
                        &quot;&quot;
                   )
               )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert Flag</label>
    <type>Text</type>
</CustomField>