force-app/main/default/objects/animalos__Animal__c/fields/animalos__Alert_Flag_Condition__c.field-meta.xml
<CustomField>
    <fullName>animalos__Alert_Flag_Condition__c</fullName>
    <label>Alert Flag Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>