force-app/main/default/objects/animalos__Animal__c/fields/animalos__Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>