force-app/main/default/objects/animalos__Animal__c/fields/animalos__Animal_Ratio__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Ratio__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Animal Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>