force-app/main/default/objects/animalos__Animal__c/fields/animalos__Behaviour_Flag__c.field-meta.xml
<CustomField>
    <fullName>animalos__Behaviour_Flag__c</fullName>
    <formula>IF(
ISBLANK(animalos__Behaviour_Flag_Condition__c),
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/default.png&quot;,&quot;DEFAULT&quot;, 30, -1),
IF(
animalos__Behaviour_Flag_Condition__c = &quot;GREEN&quot;,
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/green.png&quot;,&quot;GREEN&quot;, 30, -1),
IF(
animalos__Behaviour_Flag_Condition__c = &quot;YELLOW&quot;,
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/yellow.png&quot;,&quot;YELLOW&quot;, 30, -1),
IF(
animalos__Behaviour_Flag_Condition__c = &quot;RED&quot;,
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/red.png&quot;,&quot;RED&quot;, 30, -1),
&quot;&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behaviour Flag</label>
    <type>Text</type>
</CustomField>