force-app/main/default/objects/animalos__Animal__c/fields/animalos__Calculated_Age__c.field-meta.xml
<CustomField>
    <fullName>animalos__Calculated_Age__c</fullName>
    <formula>IF(
  NOT(ISBLANK(animalos__Deceased_Date__c)),
  IF(
    NOT(ISBLANK(animalos__Date_of_Birth__c)),
    TEXT(FLOOR((DATEVALUE(animalos__Deceased_Date__c) - animalos__Date_of_Birth__c) / 365.25)) &amp; &apos; Years &apos; &amp;
    TEXT(FLOOR(MOD((DATEVALUE(animalos__Deceased_Date__c) - animalos__Date_of_Birth__c), 365.25) / 30.44)) &amp; &apos; Months &apos; &amp;
    TEXT(FLOOR(MOD(MOD((DATEVALUE(animalos__Deceased_Date__c) - animalos__Date_of_Birth__c), 365.25), 30.44))) &amp; &apos; Days&apos;,
    NULL
  ),
  IF(
    NOT(ISBLANK(animalos__Date_of_Birth__c)),
    TEXT(FLOOR((TODAY() - animalos__Date_of_Birth__c) / 365.25)) &amp; &apos; Years &apos; &amp;
    TEXT(FLOOR(MOD((TODAY() - animalos__Date_of_Birth__c), 365.25) / 30.44)) &amp; &apos; Months &apos; &amp;
    TEXT(FLOOR(MOD(MOD((TODAY() - animalos__Date_of_Birth__c), 365.25), 30.44))) &amp; &apos; Days&apos;,
    NULL
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Age</label>
    <type>Text</type>
</CustomField>