force-app/main/default/objects/animalos__Animal__c/fields/animalos__Class__c.field-meta.xml
<CustomField>
    <fullName>animalos__Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Exotic</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Small Animal</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>