force-app/main/default/objects/animalos__Animal__c/fields/animalos__Current_Block__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Block</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Block Animals</relationshipLabel>
    <relationshipName>Block_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>