force-app/main/default/objects/animalos__Animal__c/fields/animalos__Current_Days_Foster__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Days_Foster__c</fullName>
    <label>Current Days (Foster)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>