force-app/main/default/objects/animalos__Animal__c/fields/animalos__Current_Movements_Count__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Movements_Count__c</fullName>
    <label>Current_Movements_Count</label>
    <summaryFilterItems>
        <field>animalos__Movement__c.animalos__Current__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>animalos__Movement__c.animalos__Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>