force-app/main/default/objects/animalos__Animal__c/fields/animalos__Current_Referral__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Referral</label>
    <referenceTo>animalos__Referral__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>