force-app/main/default/objects/animalos__Animal__c/fields/animalos__Current_Site__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Site</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Site Animals</relationshipLabel>
    <relationshipName>Site_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>