force-app/main/default/objects/animalos__Animal__c/fields/animalos__Current_Unit__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Unit</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Unit Animals</relationshipLabel>
    <relationshipName>Unit_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>