force-app/main/default/objects/animalos__Animal__c/fields/animalos__Current_Weight__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current_Weight__c</fullName>
    <label>Current Weight</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>