force-app/main/default/objects/animalos__Animal__c/fields/animalos__Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>