force-app/main/default/objects/animalos__Animal__c/fields/animalos__Days_at_Site__c.field-meta.xml
<CustomField>
    <fullName>animalos__Days_at_Site__c</fullName>
    <formula>If(ISPICKVAL(animalos__Stage__c, &apos;Out&apos;), animalos__Outgoing_Date__c - DATEVALUE(animalos__Incoming_Date__c), TODAY() - DATEVALUE(animalos__Incoming_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days at Site</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>