force-app/main/default/objects/animalos__Animal__c/fields/animalos__Days_in_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Days_in_Status__c</fullName>
    <formula>TODAY() - animalos__Status_Changed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>