force-app/main/default/objects/animalos__Animal__c/fields/animalos__Days_in_Status_Tracking__c.field-meta.xml
<CustomField>
    <fullName>animalos__Days_in_Status_Tracking__c</fullName>
    <formula>IF(animalos__Days_in_Status__c &lt; 10, IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/green.png&quot;,&quot;GREEN&quot;, 30, -1),
IF(animalos__Days_in_Status__c &lt; 25, IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/yellow.png&quot;,&quot;YELLOW&quot;, 30, -1),
IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__indicatorIcons/red.png&quot;,&quot;RED&quot;, 30, -1) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Status Tracking</label>
    <type>Text</type>
</CustomField>