force-app/main/default/objects/animalos__Animal__c/fields/animalos__Deceased__c.field-meta.xml
<CustomField>
    <fullName>animalos__Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>