force-app/main/default/objects/animalos__Animal__c/fields/animalos__Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Deceased_Date__c</fullName>
    <label>Deceased Date</label>
    <type>DateTime</type>
</CustomField>