force-app/main/default/objects/animalos__Animal__c/fields/animalos__Deceased_Reason__c.field-meta.xml
<CustomField>
    <fullName>animalos__Deceased_Reason__c</fullName>
    <label>Deceased Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dead On Arrival</fullName>
            </value>
            <value>
                <fullName>Death during Treatment</fullName>
            </value>
            <value>
                <fullName>Natural Causes</fullName>
            </value>
            <value>
                <fullName>Put To Sleep (PTS)</fullName>
            </value>
            <value>
                <fullName>Owner advised (Unknown)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>