force-app/main/default/objects/animalos__Animal__c/fields/animalos__Estimated_Age__c.field-meta.xml
<CustomField>
    <fullName>animalos__Estimated_Age__c</fullName>
    <label>Estimated Age</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>