force-app/main/default/objects/animalos__Animal__c/fields/animalos__Euthanasia_Reason__c.field-meta.xml
<CustomField>
    <fullName>animalos__Euthanasia_Reason__c</fullName>
    <label>Euthanasia Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behavioural - Aggression/Reactivity - Animals other species</fullName>
            </value>
            <value>
                <fullName>Behavioural - Aggression/Reactivity - Animals same species</fullName>
            </value>
            <value>
                <fullName>Behavioural - Aggression/Reactivity - Humans</fullName>
            </value>
            <value>
                <fullName>Behavioural - Compulsive, Obsessive (circling, tail chasing)</fullName>
            </value>
            <value>
                <fullName>Behavioural - Deterioration in Site</fullName>
            </value>
            <value>
                <fullName>Behavioural - Escape Behaviour</fullName>
            </value>
            <value>
                <fullName>Behavioural - Feral/Unsocialised</fullName>
            </value>
            <value>
                <fullName>Behavioural - High Arousal/Safety Risk</fullName>
            </value>
            <value>
                <fullName>Behavioural - Inappropriate Toileting</fullName>
            </value>
            <value>
                <fullName>Behavioural - Nuisance Barking/Vocalisation</fullName>
            </value>
            <value>
                <fullName>Behavioural - Resource Guarding</fullName>
            </value>
            <value>
                <fullName>Behavioural - Separation Anxiety</fullName>
            </value>
            <value>
                <fullName>Behavioural - Stressed, Anxiety, Timidity, Fearful</fullName>
            </value>
            <value>
                <fullName>Council ER - Behavioural - Unsuitable for rehoming</fullName>
            </value>
            <value>
                <fullName>Council ER - Infectious</fullName>
            </value>
            <value>
                <fullName>Council ER - Legal - Dangerous Dogs</fullName>
            </value>
            <value>
                <fullName>Council ER - Legal - Restricted Dogs</fullName>
            </value>
            <value>
                <fullName>Council ER - Medical</fullName>
            </value>
            <value>
                <fullName>Council ER - Organisational - Infant Family</fullName>
            </value>
            <value>
                <fullName>Council ER - Organisational - Infant Family (550g+) Healthy, Foster Care Unavailable</fullName>
            </value>
            <value>
                <fullName>Council ER - Organisational - Infant Family (550g+) Healthy, unweaned/Foster Care Unavailable</fullName>
            </value>
            <value>
                <fullName>Council ER - Surrendered For Euthansia - Owner Request</fullName>
            </value>
            <value>
                <fullName>Council ER - Feral/Unsocialised</fullName>
            </value>
            <value>
                <fullName>High risk of injury to other animals or people</fullName>
            </value>
            <value>
                <fullName>High risk of suffering</fullName>
            </value>
            <value>
                <fullName>Infectious - Beak and Feather</fullName>
            </value>
            <value>
                <fullName>Infectious - Calici</fullName>
            </value>
            <value>
                <fullName>Infectious - Coccidia</fullName>
            </value>
            <value>
                <fullName>Infectious - Coronavirus</fullName>
            </value>
            <value>
                <fullName>Infectious - Distemper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>