force-app/main/default/objects/animalos__Animal__c/fields/animalos__First_Consult_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__First_Consult_Date_Time__c</fullName>
    <label>First Consult Date/Time</label>
    <type>DateTime</type>
</CustomField>