force-app/main/default/objects/animalos__Animal__c/fields/animalos__Incoming_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Incoming_Date__c</fullName>
    <label>Incoming Date</label>
    <type>DateTime</type>
</CustomField>