force-app/main/default/objects/animalos__Animal__c/fields/animalos__Incoming_Site__c.field-meta.xml
<CustomField>
    <fullName>animalos__Incoming_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incoming Site</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Incoming Animals</relationshipLabel>
    <relationshipName>Incoming_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>