force-app/main/default/objects/animalos__Animal__c/fields/animalos__Is_Bonded__c.field-meta.xml
<CustomField>
    <fullName>animalos__Is_Bonded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bonded</label>
    <type>Checkbox</type>
</CustomField>