force-app/main/default/objects/animalos__Animal__c/fields/animalos__Is_Good_With_Children__c.field-meta.xml
<CustomField>
    <fullName>animalos__Is_Good_With_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Good With Children</label>
    <type>Checkbox</type>
</CustomField>