force-app/main/default/objects/animalos__Animal__c/fields/animalos__Microchip_Source__c.field-meta.xml
<CustomField>
    <fullName>animalos__Microchip_Source__c</fullName>
    <label>Microchip Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already Microchipped</fullName>
            </value>
            <value>
                <fullName>Microchipped in Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>