force-app/main/default/objects/animalos__Animal__c/fields/animalos__Months_Known__c.field-meta.xml
<CustomField>
    <fullName>animalos__Months_Known__c</fullName>
    <formula>FLOOR(MOD((TODAY() - DATEVALUE(animalos__Incoming_Date__c)),365)/30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Known</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>