force-app/main/default/objects/animalos__Animal__c/fields/animalos__Neutered_Spayed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Neutered_Spayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neutered/Spayed</label>
    <type>Checkbox</type>
</CustomField>