force-app/main/default/objects/animalos__Animal__c/fields/animalos__Neutered_Spayed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Neutered_Spayed_Date_Time__c</fullName>
    <label>Neutered/Spayed Date Time</label>
    <type>DateTime</type>
</CustomField>