force-app/main/default/objects/animalos__Animal__c/fields/animalos__Neutered_Spayed_Source__c.field-meta.xml
<CustomField>
    <fullName>animalos__Neutered_Spayed_Source__c</fullName>
    <label>Neutered/Spayed Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RSPCA Outreach</fullName>
            </value>
            <value>
                <fullName>Already Desexed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>