force-app/main/default/objects/animalos__Animal__c/fields/animalos__Number_of_Days_Offsite__c.field-meta.xml
<CustomField>
    <fullName>animalos__Number_of_Days_Offsite__c</fullName>
    <label>Number of Days (Offsite)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>