force-app/main/default/objects/animalos__Animal__c/fields/animalos__Outgoing_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Outgoing_Date__c</fullName>
    <label>Outgoing Date</label>
    <type>Date</type>
</CustomField>