force-app/main/default/objects/animalos__Animal__c/fields/animalos__Outgoing_Site__c.field-meta.xml
<CustomField>
    <fullName>animalos__Outgoing_Site__c</fullName>
    <label>Outgoing Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>