force-app/main/default/objects/animalos__Animal__c/fields/animalos__Parent_Block_Name__c.field-meta.xml
<CustomField>
    <fullName>animalos__Parent_Block_Name__c</fullName>
    <formula>animalos__Current_Block__r.animalos__Parent_Block__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Block Name</label>
    <type>Text</type>
</CustomField>