force-app/main/default/objects/animalos__Animal__c/fields/animalos__Primary_Breed__c.field-meta.xml
<CustomField>
    <fullName>animalos__Primary_Breed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Breed</label>
    <referenceTo>animalos__Breed__c</referenceTo>
    <relationshipLabel>Animals (Primary Breed)</relationshipLabel>
    <relationshipName>Animals_Primary_Breed</relationshipName>
    <type>Lookup</type>
</CustomField>